--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ font-family: sans-serif;
 <p class="deliverPlace"><b>USA</b></p>
 </div>
 <div class="returns">
-<img id="cartReturns" src="C:\Users\Hp\Desktop\Soham\Programming\projects\Fake iPhone 12 website\Images\right-top.png">
+<img id="cartReturns" src="right-top.png">
 </div>
 </div>
 <div class="spinAndWin">
@@ -173,11 +173,11 @@ font-family: sans-serif;
 <p class="spinAndWinAnd">&</p>
 <p class="spinAndWinWin">Win</p>
 </div>
-<img id="wheel" src="C:\Users\Hp\Desktop\Soham\Programming\projects\Fake iPhone 12 website\Images\wheel.png">
-<img id="search" src="C:\Users\Hp\Desktop\Soham\Programming\projects\Fake iPhone 12 website\Images\search.png">
-<img id="icon" src="C:\Users\Hp\Desktop\Soham\Programming\projects\Fake iPhone 12 website\Images\icon.png">
-<img id="arrow" src="C:\Users\Hp\Desktop\Soham\Programming\projects\Fake iPhone 12 website\Images\arrow.png">
-<img id="logo" src="C:\Users\Hp\Desktop\Soham\Programming\projects\Fake iPhone 12 website\Images\amazon-logo.png">
+<img id="wheel" src="wheel.png">
+<img id="search" src="search.png">
+<img id="icon" src="icon.png">
+<img id="arrow" src="arrow.png">
+<img id="logo" src="amazon-logo.png">
 <button id="spin" onclick="spin()">SPIN</button>
 </div>
 <script>
