--- a/index.html
+++ b/index.html
@@ -254,14 +254,16 @@ cursor: pointer;
 </div>
 </div>
 <script>
+var audio = new Audio('spinning-wheel-123.mp3');
 var random  = Math.floor(Math.random() * 33);
 function spin() {
-var audio = new Audio('spinning-wheel-123.mp3');
 audio.play(); 
 var math = 3062 + random;
 var mathTwo = 6530 + random;
 document.getElementById("wheel").style.transform = "rotate("+math+"deg)";
-setTimeout(function(){ document.getElementById("arrow").style.animationDuration="0.6s"; audio.pause();}, 10000);
+setTimeout(function(){ document.getElementById("arrow").style.animationDuration="0.6s";
+audio.pause();                     
+}, 10000);
 setTimeout(function(){alert("You received an Extra Chance!");
 document.getElementById("arrow").style.animationDuration="0s";
 audio.play();
