--- a/index.html
+++ b/index.html
@@ -261,18 +261,22 @@ audio.play();
 var math = 3062 + random;
 var mathTwo = 6530 + random;
 document.getElementById("wheel").style.transform = "rotate("+math+"deg)";
-setTimeout(function(){ document.getElementById("arrow").style.animationDuration="0.6s";
-audio.pause();                     
-}, 10000);
+setTimeout(function(){ document.getElementById("arrow").style.animationDuration="0.6s";             
+}, 10500);
+setTimeout(function(){ audio.pause()     
+}, 13000);
 setTimeout(function(){alert("You received an Extra Chance!");
 document.getElementById("arrow").style.animationDuration="0s";
-audio.play();
 document.getElementById("wheel").style.transform = "rotate("+mathTwo+"deg)";
-}, 12000);
+}, 13000);
+setTimeout(function(){ audio.play();     
+}, 14000);
 setTimeout(function(){ 
 document.getElementById("arrow").style.animationDuration="0.6s";
-audio.pause();
 }, 22000);
+setTimeout(function(){ 
+audio.pause();
+}, 26000);
 setTimeout(function(){ 
 alert("YOU WON AN IPHONE 12 PRO MAX! CONGRATULATIONS!!!");
 document.getElementById("popup").style.display="inline";
